# penguins_predictions

./: Dockerfile  README.md  instructions.md  main.py  model.pkl  pyproject.toml  train.ipynb
.github/: copilot-instructions.md
.github/agents/: PythonAgent.agent.md
